# AutoVE

./: .gitignore  README.md
AutoVE/: AutoVEApp.cpp  AutoVEApp.h  CMakeLists.txt  main.cpp  pch.h
AutoVE/GUILib/: CMakeLists.txt  ChatPanel.cpp  ChatPanel.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  VideoPanel.cpp  VideoPanel.h  VideoTimeline.cpp  VideoTimeline.h  pch.h
AutoVE/UtilsLib/: Actions.cpp  Actions.h  AutoVEAPI.cpp  AutoVEAPI.h  CMakeLists.txt  main.cpp
AutoVE_actions/: actions.py  video_editor.py
PyGUI/: chat_panel.py  main.py  main_frame.py  video_panel.py
